[package]
name = "screensnap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.11.0"
image = "0.23"
imgui-winit-support = "0.11.0"
winit = "0.28.6"
glium = "0.32.1"
imgui-glium-renderer = "0.11.0"
copypasta = "0.8.2"
screenshots = "0.6.0"

[lib]
crate-type = ["cdylib"]
name = "screensnap"
